frontend/test/should_pass/autojoin.gm
node class namedObject
{
	name:string;
}

edge class WORKS_FOR;

edge class INTERESTED_IN
{
	weight : double;
}
