frontend/test/should_fail/autojoin.gm
node class namedObject
{
	name:string;
}

node class unnamedObject
{
}

edge class WORKS_FOR;

edge class INTERESTED_IN
{
	weight : double;
}
